Fixed navbar overlap with content

--- a/src/layout/Layout.module.css
+++ b/src/layout/Layout.module.css
@@ -1,10 +1,9 @@
 .Layout {
     height: 100%;
-    background: rgb(190, 190, 190);
+    background: rgb(236, 236, 236);
 }
 
 .ContentWrapper {
     box-sizing: border-box;
-    padding: 15px;
-    padding-top: 30px;
+    padding: 50px 15px 0;
 }
